fixed layout issues by moving to react-bootstrap

--- a/client/src/style/writertoys.css
+++ b/client/src/style/writertoys.css
@@ -3,13 +3,11 @@ html {
   position: relative;
   min-height: 100%;
 }
-
+/* 
 body {
-  /* Margin top by navbar height */
   margin-top: 60px;
-  /* Margin bottom by footer height */
   margin-bottom: 60px;
-}
+} */
 .main {
   margin: 0 auto;
 }
@@ -24,5 +22,5 @@ body {
   line-height: 60px;
   /* Vertically center the text there */
   background-color: #f5f5f5;
-  font-size: x-small;
+  font-size: small;
 }
